--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,20 @@
 Package: CMAPToolkit
-Title: What the Package Does (One Line, Title Case)
+Title: Analysis of L1000 Connectivity Map Data
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+Authors@R: c(
+    person("Ian", "Smith", email="ianc.smith@mail.utoronto.ca", role=c("aut"), comment=c(ORCID="")),
+    person("Benjamin", "Haibe-Kains", email="benjamin.haibe.kains@utoronto.ca", role=c("aut", "cre"))
+    )
+Description: This package is designed for analysis on L1000 data in the Benjamin Haibe-Kains lab. It contains
+    a set of functions for computing similarities between perturbational signatures from the L1000 project, 
+    originally generated as part of the NIH LINCS Consortium. 
+License: MIT + file LICENSE
+Imports:
+    parallel,
+    fgsea,
+    coop,
+    cmapR
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1.9001
+RoxygenNote: 7.1.2
