Improved performance of compute_sim_block.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,17 @@
 
 export(compute_distance)
 export(compute_sim_block)
+export(cosine)
 export(download_l1k_data)
+export(fgseaBase)
 export(get_level5_ds)
 export(get_top_k)
 export(queryBenchmark)
 export(read_l1k_meta)
+import(BiocParallel)
+import(data.table)
+import(fastmatch)
+import(stats)
 importFrom(R.utils,gunzip)
 importFrom(cmapR,subset_gct)
 importFrom(coop,cosine)
