--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,8 @@ export(compute_distance)
 export(cosine)
 export(download_l1k_data)
 export(fgseaBase)
+export(getTopK)
 export(get_level5_ds)
-export(get_top_k)
 export(queryBenchmark)
 export(read_l1k_meta)
 import(BiocParallel)
@@ -22,3 +22,4 @@ importFrom(fgsea,fgseaSimple)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(rbenchmark,benchmark)
+importFrom(utils,download.file)
